# goit-pythonweb-hw-10

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  compose.yaml  hw08.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 15f50e5e4a35_initial_migration.py  4eb23b3dcf14_adduser.py  be08296e668b_add_user_token_verify.py  dbe5d351143a_change_unique_email_field.py
src/: app.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: basic.py  db.py
src/dependencies/: auth.py
src/exceptions/: auth.py  contacts.py  core.py  fs.py  utils.py
src/filters/: contacts.py
src/helpers/: helpers.py
src/models/: contacts.py  users.py
src/repository/: contacts.py  users.py
src/schemas/: auth.py  contacts.py  core.py  users.py  utils.py
src/services/: auth.py  contacts.py  email.py  fs.py  users.py
src/services/templates/: confirm_email.html
