[project]
name = "hw08"
version = "0.1.0"
description = ""
authors = [
    {name = "Hrebynakha Anatolii",email = "hrebynakha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-extra-types (>=2.10.3,<3.0.0)",
    "phonenumbers (>=9.0.1,<10.0.0)",
    "fastapi-sa-orm-filter (>=0.2.2,<0.3.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
poetry-plugin-export = ">=1.9.0,<2.0.0"

